# stock-logistics-barcode

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
barcode_generator_product_variant/: README.rst  __manifest__.py
barcode_link/: __init__.py  __openerp__.py  barcode_link.py  barcode_link_view.xml
barcode_validation/: README.rst  __manifest__.py
barcodes_ean14/: README.rst  __manifest__.py
barcodes_generator/: README.rst
barcodes_generator_abstract/: README.rst  __manifest__.py  __openerp__.py
barcodes_generator_location/: README.rst  __manifest__.py  hooks.py
barcodes_generator_lot/: README.rst  __manifest__.py
barcodes_generator_package/: README.rst  __manifest__.py
barcodes_generator_partner/: README.rst  __manifest__.py  __openerp__.py
barcodes_generator_picking/: README.rst  __manifest__.py
barcodes_generator_product/: README.rst  __manifest__.py  __openerp__.py
barcodes_generator_product_multi_barcode/: README.rst  __manifest__.py
barcodes_generator_stock_picking/: README.rst  __manifest__.py
barcodes_gs1_nomenclature/: __manifest__.py
barcodes_multiline/: README.rst  __init__.py  __manifest__.py
barcodes_regex_group/: README.rst  __manifest__.py
barcodes_search/: README.rst  __init__.py  __manifest__.py
base_gs1_barcode/: README.rst  __init__.py  __manifest__.py  __openerp__.py  exceptions.py  gs1_barcode.py  gs1_barcode_view.xml  res_users.py  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2256 files in other folders)
